# mixed-types-num

./: .gitignore  README.md  changelog.md  docs  mixed-types-num.cabal  package.yaml  stack.yaml
.github/workflows/: haskell.yml
doc/: Control-CollectErrors.html  MixedTypesNumPrelude.html  Numeric-MixedTypes-Eq.html  Numeric-MixedTypes-Literals.html  Numeric-MixedTypes-MinMaxAbs.html  Numeric-MixedTypes-Round.html  Numeric-MixedTypes.html  doc-index-126.html  doc-index-36.html  doc-index-37.html  doc-index-60.html  doc-index-94.html  doc-index-All.html  doc-index-E.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-U.html  doc-index.html  mini_Numeric-MixedTypes-Bool.html  mini_Numeric-MixedTypes-Ord.html  mini_Numeric-MixedTypes-PreludeHiding.html  mini_Numeric-MixedTypes-Ring.html  mini_Numeric-MixedTypes-Round.html  mixed-types-num.txt
doc/src/: Numeric.CollectErrors.html  Numeric.MixedTypes.Bool.html  Numeric.MixedTypes.Elementary.html  Numeric.MixedTypes.Eq.html  Numeric.MixedTypes.MinMaxAbs.html  Numeric.MixedTypes.Ord.html  Numeric.MixedTypes.PreludeHiding.html  Numeric.MixedTypes.Round.html
docs/: Control-CollectErrors.html  Control-EnsureTypeOp.html  MixedTypesNumPrelude.html  Numeric-CollectErrors.html  Numeric-MixedTypes-AddSub.html  Numeric-MixedTypes-Bool.html  Numeric-MixedTypes-Complex.html  Numeric-MixedTypes-Concept-CollectErrors.html  Numeric-MixedTypes-Elementary.html  Numeric-MixedTypes-Eq.html  Numeric-MixedTypes-Field.html  Numeric-MixedTypes-Literals.html  Numeric-MixedTypes-MinMaxAbs.html  Numeric-MixedTypes-Ord.html  Numeric-MixedTypes-PreludeHiding.html  Numeric-MixedTypes-Ring.html  Numeric-MixedTypes-Round.html  Numeric-MixedTypes.html  Utils-TH-DeclForTypes.html  doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  (+39 more)
docs/src/: Control.CollectErrors.html  Control.EnsureTypeOp.html  MixedTypesNumPrelude.html  Numeric.CollectErrors.html  Numeric.MixedTypes.AddSub.html  Numeric.MixedTypes.Bool.html  Numeric.MixedTypes.Complex.html  Numeric.MixedTypes.Concept.CollectErrors.html  Numeric.MixedTypes.Elementary.html  Numeric.MixedTypes.Eq.html  Numeric.MixedTypes.Field.html  Numeric.MixedTypes.Literals.html  Numeric.MixedTypes.MinMaxAbs.html  Numeric.MixedTypes.Ord.html  Numeric.MixedTypes.PreludeHiding.html  Numeric.MixedTypes.Ring.html  Numeric.MixedTypes.Round.html  Numeric.MixedTypes.html  Utils.TH.DeclForTypes.html
src/: MixedTypesNumPrelude.hs
src/Control/: CollectErrors.hs  EnsureTypeOp.hs  WithExceptions.hs
src/Data/: EnsureTypeOp.hs
src/Data/Convertible/: Base.hs  Utils.hs
src/Data/Convertible/Instances/: Num.hs
src/Numeric/: CollectErrors.hs  MixedTypes.hs  OrdGenericBool.hs
src/Numeric/MixedTypes/: AddSub.hs  Bool.hs  Complex.hs  Div.hs  Elementary.hs  Eq.hs  EqOrd.hs  Field.hs  Kleenean.hs  Literals.hs  MinMaxAbs.hs  Mul.hs  Ord.hs  Power.hs  PreludeHiding.hs  Reduce.hs  Ring.hs  Round.hs
src/Numeric/MixedTypes/Concept/: CollectErrors.hs  WithExceptions.hs
src/Utils/TH/: DeclForTypes.hs
src/Utils/Test/: EnforceRange.hs
test/Numeric/MixedTypes/: AddSubSpec.hs  BoolSpec.hs  EqOrdSpec.hs  FieldSpec.hs  LiteralsSpec.hs  MinMaxAbsSpec.hs  RingSpec.hs  RoundSpec.hs
