name:           mixed-types-num
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple
author:         Michal Konecny
stability:      experimental
maintainer:     Michal Konecny <mikkonecny@gmail.com>
tested-with:    GHC==7.10.3
license:        BSD3
homepage:       https://github.com/michalkonecny/aern2/mixed-types-num
synopsis:       Alternative to Prelude Num deriving types bottom-up.
category:       Math
copyright:      (c) 2015, 2016 Michal Konecny, Pieter Collins
license-file:   LICENSE
Description:
    This package provides a version of Prelude where
    unary and binary operations such as @not@, @+@, @==@
    have their result type derived from the parameter type(s),
    allowing, /e.g./:
    .
      * dividing an integer by an integer, giving a rational:
      .
      @x = 1/3 :: Rational@
      .
      (The type Rational would be derived automatically because
      integer literals are always of type @Integer@, not @Num t => t@.)
      .
      * adding an integer and a rational, giving a rational:
      .
      @(length [x])+1/3 :: Rational@
    .
      * comparing an integer with an (exact) real number, giving a Maybe Bool:
      .
      @if (isCertainlyTrue (x > 1)) then ...@
      .
      (Exact real numbers are not provided by this package.
        They will be provided in a different package soon.)
      --  They are provided, /e.g./, by aern2-real.)
   .
    Arithmetic operations are provided via multi-parameter type classes
    and the result type is given by associated
    type families. For example:
    .
    @(+) :: (CanAddAsymmetric t1 t2) => t1 -> t2 -> AddType t1 t2@
    .
    Each such type class is accompanied by a hspec test suite,
    which can be applied to instance types.
    .
    To find out more, please read the documentation for the modules
    in the order specified in "Numeric.MixedTypes".

library
  hs-source-dirs:  src
  build-depends:
    base == 4.*
    , convertible >= 1.1.1.0 && < 1.2
    , hspec == 2.2.*
    , hspec-smallcheck == 0.4.*
    , smallcheck == 1.1.*
    , QuickCheck == 2.8.*
  ghc-options:     -Wall -fno-warn-orphans
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances
  exposed-modules:
    Numeric.MixedTypes
    Numeric.MixedTypes.Literals
    Numeric.MixedTypes.Bool
    Numeric.MixedTypes.EqOrd
    Numeric.MixedTypes.MinMaxAbs
    Numeric.MixedTypes.AddSub
    -- Numeric.MixedTypes.Ring
    -- Numeric.MixedTypes.Field
    -- Numeric.MixedTypes.Elementary

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    FlexibleContexts
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
    base == 4.*
    , mixed-types-num
    , hspec == 2.2.*
    , hspec-smallcheck == 0.4.*
    , QuickCheck == 2.8.*
